--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,10 @@
 #mainDiv{
+    grid-row: 2/3;
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height:100vh
 }
 #top{
     font-family: Helvetica;
@@ -38,4 +40,4 @@
 #bottom{
     font-family: Arial Black;
     font-size: 15px
-}
+}   
